--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,5 @@ rand = "0.6"
 rand_pcg = "0.1"
 
 [profile.release]
-opt-level = 3
-debug = true
-rpath = false
+debug = true # for profiling
 lto = true
-debug-assertions = false
-codegen-units = 16
-panic = 'unwind'
-incremental = false
-overflow-checks = false
