--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 [dependencies]
 image = "0.20"
 rand = "0.6"
-rand_pcg = "0.1"
+xoshiro = "0.0.4"
+rayon = "1.0"
 
 [profile.release]
 debug = true # for profiling
