--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ license = "CC0-1.0"
 edition = "2018"
 
 [dependencies]
-image = "0.20"
+image = "0.21"
 rand = "0.6"
-xoshiro = "0.0.4"
 rayon = "1.0"
+structopt = "0.2"
+xoshiro = "0.0.5"
 
 [profile.release]
 debug = true # for profiling
